--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <!-- >>Header Section<< -->
   <header class="header_section">
-    <div class="mid_content">
+    <div class="mid_content clear">
       <section class="top_header clear">
         <figure class="fig_img left">
           <img src="./img/logo.png" alt="">
@@ -33,12 +33,19 @@
             <li><a class="cl_a" href="#">HOME</a></li>
             <li><a href="#">ABOUT US</a></li>
             <li><a href="#">PAGES <span><i class="fas fa-chevron-down"></i></span></a>
-              <!-- <ul>
-                <li><a href="#">SERVICES <span><i class="fas fa-angle-down"></i></span></a></li>
-                <li><a href="#">RTL TESTED</a></li>
-              </ul> -->
+              <ul>
+                <li><a class="drop_a" href="#">SERVICES</a></li>
+                <li><a class="drop_a" href="#">RTL TESTED</a></li>
+              </ul>
             </li>
-            <li><a href="#">BLOG <span><i class="fas fa-chevron-down"></i></span></a></li>
+            <li><a href="#">BLOG <span><i class="fas fa-chevron-down"></i></span></a>
+            <ul>
+              <li><a class=".drop_a" href="#">BLOG FULL WIDTH</a></li>
+              <li><a class=".drop_a" href="#">BLOG LEFT SIDEBAR</a></li>
+              <li><a class=".drop_a" href="#">BLOG RIGHT SIDEBAR</a></li>
+              <li><a class=".drop_a" href="#">BLOG NO SIDEBAR</a></li>
+            </ul>
+            </li>
             <li><a href="#">CONTACT LAYOUT <span><i class="fas fa-chevron-down"></i></span></a></li>
           </ul>
         </nav>
