--- a/index.html
+++ b/index.html
@@ -38,14 +38,7 @@
                 <li><a class="drop_a" href="#">RTL TESTED</a></li>
               </ul>
             </li>
-            <li><a href="#">BLOG <span><i class="fas fa-chevron-down"></i></span></a>
-            <ul>
-              <li><a class=".drop_a" href="#">BLOG FULL WIDTH</a></li>
-              <li><a class=".drop_a" href="#">BLOG LEFT SIDEBAR</a></li>
-              <li><a class=".drop_a" href="#">BLOG RIGHT SIDEBAR</a></li>
-              <li><a class=".drop_a" href="#">BLOG NO SIDEBAR</a></li>
-            </ul>
-            </li>
+            <li><a href="#">BLOG <span><i class="fas fa-chevron-down"></i></span></a></li>
             <li><a href="#">CONTACT LAYOUT <span><i class="fas fa-chevron-down"></i></span></a></li>
           </ul>
         </nav>
