--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <!-- >>Header Section<< -->
   <header class="header_section">
-    <div class="mid_content clear">
+    <div class="mid_content_h clear">
       <section class="top_header clear">
         <figure class="fig_img left">
           <img src="./img/logo.png" alt="">
