--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 
 <body>
   <!-- >>Header Section<< -->
+  
   <header class="header_section">
-    <div class="mid_content_h clear">
       <section class="top_header clear">
+        <div class="mid_content_h">
         <figure class="fig_img left">
           <img src="./img/logo.png" alt="">
         </figure>
@@ -38,12 +39,25 @@
                 <li><a class="drop_a" href="#">RTL TESTED</a></li>
               </ul>
             </li>
-            <li><a href="#">BLOG <span><i class="fas fa-chevron-down"></i></span></a></li>
-            <li><a href="#">CONTACT LAYOUT <span><i class="fas fa-chevron-down"></i></span></a></li>
+            <li><a href="#">BLOG <span><i class="fas fa-chevron-down"></i></span></a>
+              <ul>
+                <li><a class="drop_a" href="#">BLOG FULL WIDTH</a></li>
+                <li><a class="drop_a" href="#">BLOG LEFT SIDEBAR</a></li>
+                <li><a class="drop_a" href="#">BLOG RIGHT SIDEBAR</a></li>
+                <li><a class="drop_a" href="#">BLOG NO SIDEBAR</a></li>
+              </ul>
+            </li>
+            <li><a href="#">CONTACT LAYOUT <span><i class="fas fa-chevron-down"></i></span></a>
+              <ul>
+                <li><a class="drop_a" href="#">CONTACT LAYOUT 1</a></li>
+                <li><a class="drop_a" href="#">CONTACT LAYOUT 2</a></li>
+              </ul>
+            </li>
           </ul>
         </nav>
+      </div>
       </section>
-    </div>
+
     <section class="Header_banner text_center">
       <h1>Craft Wooden</h1>
       <h2>― HOUSES AND COTTAGES ―</h2>
